--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -28,12 +28,11 @@ time, mark, audio, video {
 body {
   padding:10px 50px 0 0;
   font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 12pt;
 	color: #232323;
 	background-color: #FBFAF7;
 	margin: 0;
 	line-height: 1.8em;
-	-webkit-font-smoothing: antialiased;
 
 }
 
